--- a/package.json
+++ b/package.json
@@ -14,8 +14,23 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "dotenv": "^8.6.0",
     "gatsby": "^4.14.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.15.1",
+    "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-stripe": "^1.2.4",
+    "gatsby-plugin-styled-components": "^5.15.0",
+    "gatsby-plugin-typography": "^4.14.0",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-source-stripe": "^4.0.0",
+    "gatsby-transformer-sharp": "^4.14.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.20",
+    "styled-components": "^5.3.5",
+    "typography": "^0.16.21"
   }
 }
